src/styles/global.css
/* ... */
@font-face {
    font-family: 'Executive';
    src: url('/fonts/Executive-66MediumIt.woff2') format('woff2');
    font-weight: 500;
    font-style: italic;
    font-display: swap;
}
@font-face {
    font-family: 'Executive';
    src: url('/fonts/Executive-75Bold.woff2') format('woff2');
    font-weight: bold;
    font-style: normal;
    font-display: swap;
}
@font-face {
    font-family: 'Executive';
    src: url('/fonts/Executive-76BoldIt.woff2') format('woff2');
    font-weight: bold;
    font-style: italic;
    font-display: swap;
}
@font-face {
    font-family: 'Bureau Grotesque';
    src: url('/fonts/BureauGrotesque-FiveThree.woff2') format('woff2');
    font-style: normal;
    font-weight: normal;
    font-display: swap;
}
@font-face {
    font-family: 'Bureau Grotesque';
    src: url('/fonts/BureauGrotesque-ThreeFive.woff2') format('woff2');
    font-style: normal;
    font-weight: bold;
    font-display: swap;
}

* {
    box-sizing: border-box;
    margin: 0;
}

:root {
    --color-primary: #B38EF4;
    --color-secondary: #6189F6;
    --color-secondary-light: #99A8FF;
    --color-secondary-alt: #349FD4;
    --color-tertiary: #58C1A1;
    --color-tertiary-subtle: #008775;
    --color-tertiary-dark: #005B53;
    --color-tertiary-darker: #00353e;
    --color-quad: #E691A8; 
    --color-desaturated: #505966;

    --color-background: #000920;
    --color-background-alt: #101B33;
    --color-surface: #172042;
    --color-border: #2E4383;
    --color-border-alt: var(--color-surface);

    --color-text-heading: #fbfafb;
    --color-text-body: #cdcddc;
    --color-text-code: #b6b6ce;
    --color-text-subtle: #9a9ab3;
    --color-text-disabled: #7e7e92;
    --color-text-inverted: var(--color-background);
    --color-text-link: var(--color-primary);
    --color-text-link-hover: var(--color-text-heading);
    --color-icon: var(--color-text-code);

    --space-unit: 7px;
    --space-050: calc(0.5 * var(--space-unit));
    --space-075: calc(0.75 * var(--space-unit));
    --space-100: var(--space-unit);
    --space-150: calc(1.5 * var(--space-unit));
    --space-175: calc(1.75 * var(--space-unit));
    --space-200: calc(2 * var(--space-unit));
    --space-225: calc(2.25 * var(--space-unit));
    --space-250: calc(2.5 * var(--space-unit));
    --space-275: calc(2.75 * var(--space-unit));
    --space-300: calc(3 * var(--space-unit));
    --space-350: calc(3.5 * var(--space-unit));
    --space-400: calc(4 * var(--space-unit));
    --space-500: calc(5 * var(--space-unit));
    --space-550: calc(5.5 * var(--space-unit));
    --space-600: calc(6 * var(--space-unit));
    --space-800: calc(8 * var(--space-unit));

    --font-family-body: "Executive", system-ui, sans-serif;
    --font-family-heading: "Bureau Grotesque", "DIN Alternate", "Helvetica Neue", Arial, sans-serif;
    --font-family-code: Menlo, monospace;

    --font-size-label: var(--space-175);
    --font-size-body-small: var(--space-200);
    --font-size-body: var(--space-200);
    --font-size-body-large: var(--space-225);
    --font-size-subsubheading: var(--space-250);
    --font-size-subheading: var(--space-300);
    --font-size-heading-small: var(--space-350);
    --font-size-heading: var(--space-400);
    --font-size-heading-large: var(--space-500);
    --font-size-heading-huge: var(--space-550);

    --icon-size: var(--space-300);

    --gap-grid-x: var(--space-200);
    --gap-grid-y: var(--space-300);
    --gap-grid: var(--gap-grid-y) var(--gap-grid-x);
    --padding-container: var(--space-400);
    --padding-container-small : var(--space-200);

    --border-subtle: 4px solid var(--color-border-alt);

    --transition-fast: all 0.075s ease-out;
    --transition-medium: all 0.15s ease-out;
}

body {
    height: 100%;
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    font-family: var(--font-family-body);
    font-size: var(--font-size-body);
    color: var(--color-text-body);
    background: var(--color-background);
    background-image: linear-gradient(var(--color-background-alt), var(--color-background));
    background-repeat: no-repeat;
    background-attachment: fixed;
    
    &.locked {
        overflow: hidden;
    }
}

a {
    color: var(--color-text-link);
    text-decoration: none;
    transition: var(--transition-fast);

    &:hover {
        color: var(--color-text-link-hover);
    }

    &.button-link {
        font-weight: 500;
        font-size: var(--font-size-body-large);
    }

    &.baseline {
        line-height: calc(var(--font-size-body-large) - var(--space-100));
    }
    &.disabled {
        color: var(--color-border);
        pointer-events: none;
    }

    > .icon {
        --color-icon: var(--color-primary);
    }
}

h1, h2, h3 {
    font-family: var(--font-family-heading);
    font-size: var(--font-size-element);
    color: var(--color-secondary);
    line-height: calc(var(--font-size-element) + var(--space-050));

    &.subtle {
        text-transform: uppercase;

        .icon svg {
            stroke: var(--color-secondary);
        }
    }

    &.flex {
        gap: var(--space-100);
    }

    &.baseline {
        line-height: calc(var(--font-size-element) - var(--space-050));
    }
}

h1 {
    --font-size-element: var(--font-size-heading-large);
}
h2 {
    --font-size-element: var(--font-size-heading);
}
h2.small {
    --font-size-element: var(--font-size-heading-small);
}
h3 {
    --font-size-element: var(--font-size-subheading);
}
h4 {
    font-size: var(--font-size-body-large);
    color: var(--color-text-heading);
}
h5 {
    font-size: var(--font-size-body);
    color: var(--color-text-heading);
}
/* ... */

